# omni-comment-py

./: README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  pytest.ini  tsconfig.json  vite.config.mts
.github/workflows/: ci.yml  release.yml
omni_comment/: acquire_lock.py  comments.py  main.py  metadata.py  retry.py  utils.py
omni_comment/tests/: test_main.py
src/: acquireLock.ts  comments.ts  logger.ts  main.ts  metadata.ts  retry.ts  utils.ts
src/__tests__/: main.test.ts
